Fixed MAGETWO-9938: Marked input text looks not aligned

--- a/app/design/frontend/magento2/electron/css/styles.less
+++ b/app/design/frontend/magento2/electron/css/styles.less
@@ -5239,6 +5239,14 @@ and (max-width : 768px)  {
 .form.search.advanced {
     .fieldset {
         width: 550px;
+        .range.price {
+            .field {
+                width: 90px;
+            }
+            .with-addon {
+                width: 125px;
+            }
+        }
     }
 }
 
